Create the search method in the TVShowController

--- a/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
@@ -6,3 +6,9 @@
 
 
 <h3>TV Show page</h3>
+
+
+<form asp-action="SearchTVShow" method="post">
+    <input type="search" class="form-control" name="query" id="query" placeholder="Enter the tv show name" />
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
