--- a/BooksAndMovies.WebUI/Views/Movie/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/Movie/Index.cshtml
@@ -6,3 +6,9 @@
 
 
 <h3>Movie page</h3>
+
+
+<form asp-action="SearchMovie" method="post">
+    <input type="search" class="form-control" name="query" id="query" placeholder="Enter the movie name" />
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
