--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" id="tvShowDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">TV Show</a>
                             <ul class="dropdown-menu" aria-labelledby="tvShowDropdown">
-                                <li><a class="dropdown-item">Index</a></li>
+                                <li><a class="dropdown-item" asp-action="Index" asp-controller="TVShow">Index</a></li>
                                 <li><a class="dropdown-item" href="#"> Wishlist </a></li>
                                 <li><a class="dropdown-item" href="#"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="TVShow" asp-action="Index"> Search </a></li>
