--- a/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
@@ -1,19 +1,27 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
+﻿@model List<TVShowModel>
 
 <h3>TV Show page</h3>
-
-
 
 
 <form asp-action="SearchTVShow" method="post">
     <input type="search" class="form-control" name="query" id="query" placeholder="Enter the tv show name" />
     <button type="submit" class="btn btn-primary">Search</button>
 </form>
+
+
+
+@foreach (var tvShow in Model)
+{
+    if (tvShow.PosterPath != null)
+    {
+        <h3>@tvShow.Name </h3>
+        <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="TV Show Image" />
+
+    }
+}
+
+
+
 
 
 
