--- a/BooksAndMovies.WebUI/Views/Movie/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/Movie/Index.cshtml
@@ -1,9 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
+﻿@model List<MovieModel>
 
 <h3>Movie page</h3>
 
@@ -12,3 +7,14 @@
     <input type="search" class="form-control" name="query" id="query" placeholder="Enter the movie name" />
     <button type="submit" class="btn btn-primary">Search</button>
 </form>
+
+
+@foreach (var movie in Model)
+{
+    if (movie.PosterPath != null)
+    {
+        <h3>@movie.Title </h3>
+        <img src="https://image.tmdb.org/t/p/w500/@movie.PosterPath" alt="Movie Image" />
+
+    }
+}
