--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" id="movieDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Movie</a>
                             <ul class="dropdown-menu" aria-labelledby="movieDropdown">
-                                <li><a class="dropdown-item">Index</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index">Index</a></li>
                                 <li><a class="dropdown-item" href="#"> Wishlist </a></li>
                                 <li><a class="dropdown-item" href="#"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index"> Search </a></li>
