--- a/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
@@ -10,7 +10,7 @@
 
 
 
-@foreach (var tvShow in Model)
+@*@foreach (var tvShow in Model)
 {
     if (tvShow.PosterPath != null)
     {
@@ -18,7 +18,7 @@
         <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="TV Show Image" />
 
     }
-}
+}*@
 
 
 
