--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link dropdown-toggle text-dark" id="tvShowDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">TV Show</a>
                             <ul class="dropdown-menu" aria-labelledby="tvShowDropdown">
                                 <li><a class="dropdown-item" asp-action="Index" asp-controller="TVShow">Index</a></li>
-                                <li><a class="dropdown-item" href="#"> Wishlist </a></li>
+                                <li><a class="dropdown-item" asp-action="GetWishList" asp-controller="TVShow"> Wishlist </a></li>
                                 <li><a class="dropdown-item" href="#"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="TVShow" asp-action="Index"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
@@ -39,7 +39,7 @@
                             <a class="nav-link dropdown-toggle text-dark" id="movieDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Movie</a>
                             <ul class="dropdown-menu" aria-labelledby="movieDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index">Index</a></li>
-                                <li><a class="dropdown-item" href="#"> Wishlist </a></li>
+                                <li><a class="dropdown-item" asp-action="GetWishList" asp-controller="Movie"> Wishlist </a></li>
                                 <li><a class="dropdown-item" href="#"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
@@ -50,7 +50,7 @@
                             <a class="nav-link dropdown-toggle text-dark" id="bookDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Book</a>
                             <ul class="dropdown-menu" aria-labelledby="bookDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="Index">Index</a></li>
-                                <li><a class="dropdown-item" href="#"> Wishlist </a></li>
+                                <li><a class="dropdown-item"  asp-action="GetWishList" asp-controller="Book"> Wishlist </a></li>
                                 <li><a class="dropdown-item" href="#"> Finished </a></li>
                                 <li><a class="dropdown-item" > Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
