--- a/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
@@ -1,13 +1,24 @@
-﻿@model List<TVShowModel>
-@{
-}
+﻿@model IEnumerable<TVShowModel>
+
 
 @foreach (var tvShow in Model)
 {
     if (tvShow.PosterPath != null)
     {
-        <h3>@tvShow.Name </h3>
-        <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="TV Show Image" />
+        <div id="tvShow">
+            <form asp-action="AddTVShowToWishList" method="post">
+                <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="tvShow Image" />
+                <input type="hidden"  asp-for="@tvShow.Name" />
+
+                <h3>@tvShow.Name </h3>
+                <p>@tvShow.OriginalName</p>
+                <p>@tvShow.VoteAverage</p>
+                <button type="submit" class="btn btn-primary">Add to Wishlist</button>
+            </form>
+        </div>
+
+
+        
 
     }
 }
