--- a/BooksAndMovies.WebUI/Views/_ViewImports.cshtml
+++ b/BooksAndMovies.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using BooksAndMovies.WebUI
 @using BooksAndMovies.WebUI.Models
+@using BooksAndMovies.Entity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
