--- a/BooksAndMovies.WebUI/Views/_ViewImports.cshtml
+++ b/BooksAndMovies.WebUI/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BooksAndMovies.WebUI
+@using BooksAndMovies.WebUI.ViewModels
 @using BooksAndMovies.WebUI.Models
 @using BooksAndMovies.Entity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
