--- a/BooksAndMovies.WebUI/Views/Book/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/Book/Search.cshtml
@@ -7,24 +7,28 @@
     foreach (var bookInfo in Model)
     {
         var book = @bookInfo.VolumeInfo;
-        <div id="book" class="mb-3" style="border:1px solid rgb(182 216 189 / 0.61)">
-            <form asp-action="AddBookToWishList" method="post">
-                <img src="@book.ImageLinks.Thumbnail" alt="Book Image" />
-                <input type="hidden" asp-for="@book.Title" />
-                <input type="hidden" asp-for="@book.Publisher" />
-                <input type="hidden" asp-for="@book.Description" />
-                <input type="hidden" asp-for="@book.Authors[0]" />
-                <input type="hidden" asp-for="@book.Categories[0]" />
-                <input type="hidden" asp-for="@book.PageCount" />
-                <input type="hidden" asp-for="@book.AverageRating" />
-                <input type="hidden" asp-for="@book.ImageLinks.Thumbnail" />
-                <input type="hidden" asp-for="@book.ImageLinks.SmallThumbnail" />
-                <p>@book.Title </p>
-                <p>@(book.Authors == null ? "" : book.Authors[0]) </p>
-                <p>@book.Publisher</p>
-                <p>@book.PageCount</p>
-                <button type="submit" class="btn btn-primary">Want to Read</button>
-            </form>
-        </div>
+        if (book.ImageLinks != null)
+        {
+            <div id="book" class="mb-3" style="border:1px solid rgb(182 216 189 / 0.61)">
+                <form asp-action="AddBookToWishList" method="post">
+                    <img src="@book.ImageLinks.Thumbnail" alt="Book Image" />
+                    <input type="hidden" asp-for="@book.Title" />
+                    <input type="hidden" asp-for="@book.Publisher" />
+                    <input type="hidden" asp-for="@book.Description" />
+                    <input type="hidden" asp-for="@book.Authors[0]" />
+                    <input type="hidden" asp-for="@book.Categories[0]" />
+                    <input type="hidden" asp-for="@book.PageCount" />
+                    <input type="hidden" asp-for="@book.AverageRating" />
+                    <input type="hidden" asp-for="@book.ImageLinks.Thumbnail" />
+                    <input type="hidden" asp-for="@book.ImageLinks.SmallThumbnail" />
+                    <p>@book.Title </p>
+                    <p>@(book.Authors == null ? "" : book.Authors[0]) </p>
+                    <p>@book.Publisher</p>
+                    <p>@book.PageCount</p>
+                    <button type="submit" class="btn btn-primary">Want to Read</button>
+                </form>
+            </div>
+        }
+
     }
 }
