--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <ul class="dropdown-menu" aria-labelledby="tvShowDropdown">
                                 <li><a class="dropdown-item" asp-action="Index" asp-controller="TVShow">Index</a></li>
                                 <li><a class="dropdown-item" asp-action="GetWishList" asp-controller="TVShow"> Wishlist </a></li>
-                                <li><a class="dropdown-item" href="#"> Watched </a></li>
+                                <li><a class="dropdown-item" asp-action="GetWatchedList" asp-controller="TVShow"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="TVShow" asp-action="Index"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
                             </ul>
@@ -40,7 +40,7 @@
                             <ul class="dropdown-menu" aria-labelledby="movieDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index">Index</a></li>
                                 <li><a class="dropdown-item" asp-action="GetWishList" asp-controller="Movie"> Wishlist </a></li>
-                                <li><a class="dropdown-item" href="#"> Watched </a></li>
+                                <li><a class="dropdown-item" asp-action="GetWatchedList" asp-controller="Movie"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
 
