--- a/BooksAndMovies.WebUI/wwwroot/css/site.css
+++ b/BooksAndMovies.WebUI/wwwroot/css/site.css
@@ -69,3 +69,12 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+
+/* My Custom css */
+
+img {
+    max-width:300px;
+    object-fit:cover;
+}
