--- a/BooksAndMovies.WebUI/Views/Book/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/Book/Search.cshtml
@@ -10,7 +10,7 @@
         if (book.ImageLinks != null)
         {
             <div id="book" class="mb-3" style="border:1px solid rgb(182 216 189 / 0.61)">
-                <form asp-action="AddBookToWishList" method="post">
+                <form method="post">
                     <img src="@book.ImageLinks.Thumbnail" alt="Book Image" />
                     <input type="hidden" asp-for="@book.Title" />
                     <input type="hidden" asp-for="@book.Publisher" />
@@ -25,7 +25,8 @@
                     <p>@(book.Authors == null ? "" : book.Authors[0]) </p>
                     <p>@book.Publisher</p>
                     <p>@book.PageCount</p>
-                    <button type="submit" class="btn btn-primary">Want to Read</button>
+                    <button type="submit" class="btn btn-primary" asp-action="AddBookToWishlist">Want to Read</button>
+                    <button type="submit" class="btn btn-secondary" asp-action="AddBookToFinishedlist">Add to Finishedlist</button>
                 </form>
             </div>
         }
