--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
                             <a class="nav-link dropdown-toggle text-dark" id="bookDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Book</a>
                             <ul class="dropdown-menu" aria-labelledby="bookDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="Index">Index</a></li>
-                                <li><a class="dropdown-item"  asp-action="GetWishList" asp-controller="Book"> Wishlist </a></li>
-                                <li><a class="dropdown-item" href="#"> Finished </a></li>
+                                <li><a class="dropdown-item"  asp-action="GetWishlist" asp-controller="Book"> Wishlist </a></li>
+                                <li><a class="dropdown-item" asp-action="GetFinishedlist" asp-controller="Book"> Finished </a></li>
                                 <li><a class="dropdown-item" > Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
 
