--- a/BooksAndMovies.WebUI/wwwroot/css/site.css
+++ b/BooksAndMovies.WebUI/wwwroot/css/site.css
@@ -78,3 +78,11 @@ img {
     max-width:300px;
     object-fit:cover;
 }
+
+#book {
+    text-align: center !important;
+}
+
+#book #bookImage {
+    height:193px;
+}
