--- a/BooksAndMovies.WebUI/Views/Shared/_TVShowListPartial.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_TVShowListPartial.cshtml
@@ -4,19 +4,27 @@
 }
 
 <div class="row">
+    <strong>
+        Total tvshow count is "@Model.TVShows.Count"
+    </strong>
     @foreach (var tvShow in Model.TVShows)
     {
-        if (tvShow.PosterPath != null)
+        if (tvShow.BackdropPath != null)
         {
             <div class="col-md-3">
                 <div id="tvShow">
-                    <form asp-action="RemoveTVShowFromWishList" method="post">
-                        <img src="@tvShow.PosterPath" alt="tvShow Image" />
+                    <form method="post">
+                        <img src="@tvShow.BackdropPath" alt="tvShow Image" />
                         <input type="hidden" name="id" asp-for="@tvShow.Id" />
                         <h3>@tvShow.Name </h3>
                         <p>@tvShow.OriginalName</p>
                         <p>@tvShow.VoteAverage</p>
-                        <button type="submit" class="btn btn-danger" asp-action="@methodName">Remove from @Model.TVShowListType </button>
+                        @if (Model.TVShowListType == "Wishlist")
+                        {
+                            <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="MoveTVShowToWatchedlist"> Move to watchedlist</button>
+
+                        }
+                        <button type="submit" class="btn btn-danger btn-sm mb-2" asp-action="@methodName">Remove from @Model.TVShowListType </button>
                     </form>
                 </div>
             </div>
