--- a/BooksAndMovies.WebUI/Views/Book/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/Book/Index.cshtml
@@ -1,12 +1,47 @@
 ﻿
+@model IEnumerable<BookInfoModel>
 
 
 
-<h3>Book page</h3>
+@if (Model != null)
+{
+    <div class="row">
+        <strong>
+            Total book count is "@Model.ToList().Count"
+        </strong>
+        @foreach (var bookInfo in Model)
+        {
+            var book = @bookInfo.VolumeInfo;
+            if (book.ImageLinks != null)
+            {
+                <div class="col-md-3">
+                    <div id="book" class="mb-3">
+                        <form method="post">
+                            <img src="@book.ImageLinks.Thumbnail" alt="Book Image" />
+                            <input type="hidden" asp-for="@book.Title" />
+                            <input type="hidden" asp-for="@book.Publisher" />
+                            <input type="hidden" asp-for="@book.Description" />
+                            <input type="hidden" asp-for="@book.Authors[0]" />
+                            <input type="hidden" asp-for="@book.Categories[0]" />
+                            <input type="hidden" asp-for="@book.PageCount" />
+                            <input type="hidden" asp-for="@book.AverageRating" />
+                            <input type="hidden" asp-for="@book.ImageLinks.Thumbnail" />
+                            <input type="hidden" asp-for="@book.ImageLinks.SmallThumbnail" />
+                            <p>@book.Title </p>
+                            <p>@(book.Authors == null ? "" : book.Authors[0]) </p>
+                            <p>@book.Publisher</p>
+                            <p>@book.PageCount</p>
+                            <button type="submit" class="btn btn-primary" asp-action="AddBookToWishlist">Want to Read</button>
+                            <button type="submit" class="btn btn-secondary" asp-action="AddBookToFinishedlist">Add to Finishedlist</button>
+                        </form>
+                    </div>
+                </div>
+            }
+
+        }
+    </div>
+}
 
 
 
-<form asp-action="SearchBook" method="post">
-    <input type="search" class="form-control" name="query" id="query" placeholder="Enter the book name" />
-    <button type="submit" class="btn btn-primary">Search</button>
-</form>
+
