--- a/BooksAndMovies.WebUI/Views/Movie/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/Movie/Search.cshtml
@@ -1,30 +1,47 @@
 ﻿@model IEnumerable<MovieModel>
 
+<h4>Movie search page</h4>
+<form asp-action="SearchMovie" method="post">
+    <input type="search" class="form-control" name="query" id="query" placeholder="Enter the movie name" />
+    <button type="submit" class="btn btn-primary">Search</button>
+</form>
 
-@foreach (var movie in Model)
+
+
+
+@if (Model != null)
 {
-    if (movie.PosterPath != null)
-    {
-        <div id="movie">
-            <form method="post">
-                <img src="https://image.tmdb.org/t/p/w500/@movie.PosterPath" alt="Movie Image" />
-                <input type="hidden" name="title" value="@movie.Title" />
-                <input type="hidden" name="originalTitle" asp-for="@movie.OriginalTitle" />
-                <input type="hidden" name="overview" asp-for="@movie.Overview" />
-                <input type="hidden" name="posterPath" asp-for="@movie.PosterPath" />
-                <input type="hidden" name="backdropPath" asp-for="@movie.BackdropPath" />
-                <input type="hidden" name="releaseDate" asp-for="@movie.ReleaseDate" />
-                <input type="hidden" name="voteAverage" asp-for="@movie.VoteAverage" />
-                <input type="hidden" name="voteCount" asp-for="@movie.VoteCount" />
-                <input type="hidden" name="popularity" asp-for="@movie.Popularity" />
+    <div class="row">
+        <strong>
+            Total movie count is "@Model.ToList().Count"
+        </strong>
+        @foreach (var movie in Model)
+        {
+            if (movie.PosterPath != null)
+            {
+                <div class="col-md-3">
+                    <div id="movie">
+                        <form method="post">
+                            <img src="https://image.tmdb.org/t/p/w500/@movie.PosterPath" alt="Movie Image" />
+                            <input type="hidden" name="title" value="@movie.Title" />
+                            <input type="hidden" name="originalTitle" asp-for="@movie.OriginalTitle" />
+                            <input type="hidden" name="overview" asp-for="@movie.Overview" />
+                            <input type="hidden" name="posterPath" asp-for="@movie.PosterPath" />
+                            <input type="hidden" name="backdropPath" asp-for="@movie.BackdropPath" />
+                            <input type="hidden" name="releaseDate" asp-for="@movie.ReleaseDate" />
+                            <input type="hidden" name="voteAverage" asp-for="@movie.VoteAverage" />
+                            <input type="hidden" name="voteCount" asp-for="@movie.VoteCount" />
+                            <input type="hidden" name="popularity" asp-for="@movie.Popularity" />
 
-                <h3>@movie.Title </h3>
-                <p>@movie.OriginalTitle</p>
-                <p>@movie.VoteAverage</p>
-                <button asp-action="AddMovieToWishList" type="submit" class="btn btn-primary">Add to Wishlist</button>
-                <button asp-action="AddMovieToWatchedList" type="submit" class="btn btn-secondary">Add to WatchedList</button>
-            </form>
-        </div>
-    }
+                            <h4>@movie.Title </h4>
+                            <p>@movie.OriginalTitle</p>
+                            <p>@movie.VoteAverage</p>
+                            <button asp-action="AddMovieToWishList" type="submit" class="btn btn-primary">Add to Wishlist</button>
+                            <button asp-action="AddMovieToWatchedList" type="submit" class="btn btn-secondary">Add to WatchedList</button>
+                        </form>
+                    </div>
+                </div>
+            }
+        }
+    </div>
 }
-
