--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                                 <li><a class="dropdown-item" asp-action="Index" asp-controller="TVShow">Index</a></li>
                                 <li><a class="dropdown-item" asp-action="GetWishList" asp-controller="TVShow"> Wishlist </a></li>
                                 <li><a class="dropdown-item" asp-action="GetWatchedList" asp-controller="TVShow"> Watched </a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="TVShow" asp-action="Index"> Search </a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="TVShow" asp-action="Search"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
                             </ul>
                         </li>
@@ -41,7 +41,7 @@
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index">Index</a></li>
                                 <li><a class="dropdown-item" asp-action="GetWishList" asp-controller="Movie"> Wishlist </a></li>
                                 <li><a class="dropdown-item" asp-action="GetWatchedList" asp-controller="Movie"> Watched </a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Index"> Search </a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Search"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
 
                             </ul>
@@ -50,9 +50,9 @@
                             <a class="nav-link dropdown-toggle text-dark" id="bookDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Book</a>
                             <ul class="dropdown-menu" aria-labelledby="bookDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="Index">Index</a></li>
-                                <li><a class="dropdown-item"  asp-action="GetWishlist" asp-controller="Book"> Wishlist </a></li>
+                                <li><a class="dropdown-item" asp-action="GetWishlist" asp-controller="Book"> Wishlist </a></li>
                                 <li><a class="dropdown-item" asp-action="GetFinishedlist" asp-controller="Book"> Finished </a></li>
-                                <li><a class="dropdown-item" > Search </a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="Search"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
 
                             </ul>
