--- a/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
@@ -1,27 +1,45 @@
 ﻿@model List<TVShowModel>
 
-<h3>TV Show page</h3>
-
-
-<form asp-action="SearchTVShow" method="post">
-    <input type="search" class="form-control" name="query" id="query" placeholder="Enter the tv show name" />
-    <button type="submit" class="btn btn-primary">Search</button>
-</form>
 
 
 
-@*@foreach (var tvShow in Model)
-{
-    if (tvShow.PosterPath != null)
+
+<div class="row">
+    <strong>
+        Total tvshow count is "@Model.Count"
+    </strong>
+    @foreach (var tvShow in Model)
     {
-        <h3>@tvShow.Name </h3>
-        <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="TV Show Image" />
+        if (tvShow.PosterPath != null)
+        {
+            <div class="col-md-3">
+                <div id="tvShow">
+                    <form method="post">
+                        <img src="https://image.tmdb.org/t/p/w500/@tvShow.PosterPath" alt="tvShow Image" />
+                        <input type="hidden" name="name" asp-for="@tvShow.Name" />
+                        <input type="hidden" name="originalName" asp-for="@tvShow.OriginalName" />
+                        <input type="hidden" name="overview" asp-for="@tvShow.Overview" />
+                        <input type="hidden" name="posterPath" asp-for="@tvShow.PosterPath" />
+                        <input type="hidden" name="backdropPath" asp-for="@tvShow.BackdropPath" />
+                        <input type="hidden" name="firstAirDate" asp-for="@tvShow.FirstAirDate" />
+                        <input type="hidden" name="voteAverage" asp-for="@tvShow.VoteAverage" />
+                        <input type="hidden" name="voteCount" asp-for="@tvShow.VoteCount" />
+                        <input type="hidden" name="popularity" asp-for="@tvShow.Popularity" />
+                        <h4>@tvShow.Name </h4>
+                        <p>@tvShow.OriginalName</p>
+                        <p>@tvShow.VoteAverage</p>
 
+                        <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWatchedlist"> Add to watchedlist</button>
+                        <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWishList"> Add to wishlist </button>
+                    </form>
+                </div>
+            </div>
+
+        }
     }
-}*@
 
 
-
+</div>
 
 
 
