--- a/BooksAndMovies.WebUI/Views/Movie/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/Movie/Index.cshtml
@@ -28,6 +28,8 @@
                         <p>@movie.VoteAverage</p>
                         <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddMovieToWatchedlist"> Add to watchedlist</button>
                         <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddMovieToWishList"> Add to wishlist </button>
+                        <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="MovieDetail"><i class="fa fa-eye" aria-hidden="true"></i></button>
+
                     </form>
                 </div>
             </div>
