--- a/BooksAndMovies.WebUI/Views/Movie/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/Movie/Search.cshtml
@@ -36,8 +36,10 @@
                             <h4>@movie.Title </h4>
                             <p>@movie.OriginalTitle</p>
                             <p>@movie.VoteAverage</p>
-                            <button asp-action="AddMovieToWishList" type="submit" class="btn btn-primary">Add to Wishlist</button>
-                            <button asp-action="AddMovieToWatchedList" type="submit" class="btn btn-secondary">Add to WatchedList</button>
+                            <button asp-action="AddMovieToWishList" type="submit" class="btn btn-primary btn-sm mb-2">Add to Wishlist</button>
+                            <button asp-action="AddMovieToWatchedList" type="submit" class="btn btn-secondary btn-sm mb-2">Add to WatchedList</button>
+                            <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="MovieDetail"><i class="fa fa-eye" aria-hidden="true"></i></button>
+
                         </form>
                     </div>
                 </div>
