--- a/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
+++ b/BooksAndMovies.WebUI/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - BooksAndMovies</title>
     <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
@@ -32,6 +33,7 @@
                                 <li><a class="dropdown-item" asp-action="GetWatchedList" asp-controller="TVShow"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="TVShow" asp-action="Search"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
+                                <li><a class="dropdown-item" href="#"> Favourite </a></li>
                             </ul>
                         </li>
 
@@ -43,7 +45,7 @@
                                 <li><a class="dropdown-item" asp-action="GetWatchedList" asp-controller="Movie"> Watched </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Search"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
-
+                                <li><a class="dropdown-item" href="#"> Favourite </a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -54,7 +56,7 @@
                                 <li><a class="dropdown-item" asp-action="GetFinishedlist" asp-controller="Book"> Finished </a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Book" asp-action="Search"> Search </a></li>
                                 <li><a class="dropdown-item" href="#"> Rate </a></li>
-
+                                <li><a class="dropdown-item" href="#"> Favourite </a></li>
                             </ul>
                         </li>
                     </ul>
