--- a/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Index.cshtml
@@ -31,6 +31,7 @@
 
                         <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWatchedlist"> Add to watchedlist</button>
                         <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWishList"> Add to wishlist </button>
+                        <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="TVShowDetail"><i class="fa fa-eye" aria-hidden="true"></i></button>
                     </form>
                 </div>
             </div>
