--- a/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
+++ b/BooksAndMovies.WebUI/Views/TVShow/Search.cshtml
@@ -39,8 +39,10 @@
                             <h3>@tvShow.Name </h3>
                             <p>@tvShow.OriginalName</p>
                             <p>@tvShow.VoteAverage</p>
-                            <button type="submit" class="btn btn-primary" asp-action="AddTVShowToWishList">Add to Wishlist</button>
-                            <button type="submit" class="btn btn-secondary" asp-action="AddTVShowToWatchedList">Add to Watchedlist</button>
+                            <button type="submit" class="btn btn-primary btn-sm mb-2" asp-action="AddTVShowToWishList">Add to Wishlist</button>
+                            <button type="submit" class="btn btn-secondary btn-sm mb-2" asp-action="AddTVShowToWatchedList">Add to Watchedlist</button>
+                            <button type="submit" class="btn btn-info btn-sm mb-2" asp-action="TVShowDetail"><i class="fa fa-eye" aria-hidden="true"></i></button>
+
                         </form>
                     </div>
                 </div>
